# fast-factorio-seed-finder

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_debug.sh  build_release.sh  map-gen-settings.json  output.csv
.devcontainer/: devcontainer.json
benchmark/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  constants.hpp  finder.cpp  finder.hpp  gradients.cpp  gradients.hpp  math.hpp  noise.cpp  noise.hpp  random.hpp  spot_noise.cpp  spot_noise.hpp  spot_noise_constants.hpp  utils.hpp
image_generator/: CMakeLists.txt  main.cpp
mods/: mod-list.json
mods/mod/: data-final-fixes.lua  info.json
scripts/: compare_factorio.py
seed_finders/botless_solo_any/: stages.cpp
seed_finders/solo_any/: stages.cpp
seed_finders/tas_any/: CMakeLists.txt  main.cpp  stages.cpp  stages.hpp
solo_any_seed_finder/: CMakeLists.txt  main.cpp  stages.cpp  stages.hpp
